# sctm-lab-raspberry

./: README.md
LabRaspberryPi.Camera_Docente/allegati/: allegato_opencv.docx
LabRaspberryPi.Camera_Docente/camcv_lab/: CMakeLists.txt  Makefile  camcv.cpp  student.cpp  student.h
LabRaspberryPi.Camera_PythonExtra/Face_detection/: face_detection.py
LabRaspberryPi.Camera_PythonExtra/Face_detection_multithread/: face_detection_multithread.py
LabRaspberryPi.Distanze_Docente/ES2_ultrasound_docente/: compile.sh  ultrasound.c
LabRaspberryPi.Fotoresistor_Docente/: fotoresistor.fzz
LabRaspberryPi.Fotoresistor_Docente/fotoresistor/: compile.sh  fotoresistor.c
LabRaspberryPi.Led_Docente/ES0_blink_docente/: blink.c  compile.sh
LabRaspberryPi.MotionDetection_Docente/Allegati/: allegato_opencv_python.docx
LabRaspberryPi.MotionDetection_Docente/motioncv/: conf.json  motion_detection.py
LabRaspberryPi.MotionDetection_Docente/motioncv/libs/: tempimage.py
LabRaspberryPi.PWM_Interrupt_Multithreading_Docente/: PWM_Interrupt_Multithreading.fzz  PWM_Interrupt_Multithreading_NoPhisicalBtn.fzz
LabRaspberryPi.PWM_Interrupt_Multithreading_Docente/PWM_Interrupt_Multithreading/: advancedBlink.c  compile.sh
LabRaspberryPi.SerialCommunication_Docente/Arduino/: arduino2rasp.ino
LabRaspberryPi.SerialCommunication_Docente/Raspberry/: arduino2rasp.c  compile.sh
LabRaspberryPi.Suono_Docente/ES3_sound_docente/: compile.sh  sound.c
LabRaspberryPi.Temperatura_Docente/ES1_temperature_docente/: compile.sh  temperature.c
